# parallelized_matrix_multiplier

./: CMakeLists.txt  GameOfLife.cpp  Makefile  MatmulViz.cpp  cuda_setup.sh  data.csv  hw3.txt  matrix  matrix.cu  q4.sh  q5  q5.cu  util.h
SFML/: CMakeLists.txt
audio/: Makefile  audioblur.cpp  audioblur.cu  audioblur.cuh  blur-audio  blur-noaudio
